force-app/main/default/objects/Attendance__c/fields/AcutalOTHour__c.field-meta.xml
<CustomField>
    <fullName>AcutalOTHour__c</fullName>
    <label>OT (Hour)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>