force-app/main/default/objects/Attendance__c/fields/AssessmentResult__c.field-meta.xml
<CustomField>
    <fullName>AssessmentResult__c</fullName>
    <label>Assessment Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>