force-app/main/default/objects/Attendance__c/fields/Attendance_date__c.field-meta.xml
<CustomField>
    <fullName>Attendance_date__c</fullName>
    <label>Attendance date</label>
    <type>Date</type>
</CustomField>