force-app/main/default/objects/Attendance__c/fields/Check_in_hour_in_Policy__c.field-meta.xml
<CustomField>
    <fullName>Check_in_hour_in_Policy__c</fullName>
    <formula>If( WEEKDAY__c =&quot;1&quot;, Employee__r.Work_Policy__r.Sunday_Start__c , 
If( WEEKDAY__c =&quot;2&quot;, Employee__r.Work_Policy__r.Monday_Start__c , 
If( WEEKDAY__c =&quot;3&quot;,  Employee__r.Work_Policy__r.Tuesday_Start__c  , 
If( WEEKDAY__c =&quot;4&quot;,  Employee__r.Work_Policy__r.Wednesday_Start__c , 
If( WEEKDAY__c =&quot;5&quot;,  Employee__r.Work_Policy__r.Thursday_Start__c , 
If( WEEKDAY__c =&quot;6&quot;,  Employee__r.Work_Policy__r.Friday_Start__c ,   Employee__r.Work_Policy__r.Saturday_Start__c  ))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check in hour in Policy</label>
    <type>Time</type>
</CustomField>