force-app/main/default/objects/Attendance__c/fields/Check_in_late__c.field-meta.xml
<CustomField>
    <fullName>Check_in_late__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check in late</label>
    <type>Checkbox</type>
</CustomField>