force-app/main/default/objects/Attendance__c/fields/Check_out_hour_in_Policy__c.field-meta.xml
<CustomField>
    <fullName>Check_out_hour_in_Policy__c</fullName>
    <formula>If( WEEKDAY__c =&quot;1&quot;, Employee__r.Work_Policy__r.Sunday_End__c ,
If( WEEKDAY__c =&quot;2&quot;, Employee__r.Work_Policy__r.Monday_End__c ,
If( WEEKDAY__c =&quot;3&quot;, Employee__r.Work_Policy__r.Tuesday_End__c ,
If( WEEKDAY__c =&quot;4&quot;, Employee__r.Work_Policy__r.Wednesday_End__c ,
If( WEEKDAY__c =&quot;5&quot;, Employee__r.Work_Policy__r.Thursday_end__c ,
If( WEEKDAY__c =&quot;6&quot;, Employee__r.Work_Policy__r.Friday_End__c , Employee__r.Work_Policy__r.Saturday_End__c ))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check out hour in Policy</label>
    <type>Time</type>
</CustomField>