force-app/main/default/objects/Attendance__c/fields/Check_out_Location__c.field-meta.xml
<CustomField>
    <fullName>Check_out_Location__c</fullName>
    <label>Check-out Location</label>
    <length>50</length>
    <type>Text</type>
</CustomField>