force-app/main/default/objects/Attendance__c/fields/Check_out_Policy_Flow__c.field-meta.xml
<CustomField>
    <fullName>Check_out_Policy_Flow__c</fullName>
    <formula>Employee__r.Work_Policy__r.Monday_End__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check out Policy Flow</label>
    <type>Time</type>
</CustomField>