force-app/main/default/objects/Attendance__c/fields/CheckInViolation__c.field-meta.xml
<CustomField>
    <fullName>CheckInViolation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Check In Violation</label>
    <referenceTo>Violation_Definition__c</referenceTo>
    <relationshipLabel>Attendance</relationshipLabel>
    <relationshipName>Attendance</relationshipName>
    <type>Lookup</type>
</CustomField>