force-app/main/default/objects/Attendance__c/fields/DateText__c.field-meta.xml
<CustomField>
    <fullName>DateText__c</fullName>
    <label>Date Text</label>
    <length>11</length>
    <type>Text</type>
</CustomField>