force-app/main/default/objects/Attendance__c/fields/Deduction_Amount_to_rollup__c.field-meta.xml
<CustomField>
    <fullName>Deduction_Amount_to_rollup__c</fullName>
    <label>Deduction Amount to rollup</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>