force-app/main/default/objects/Attendance__c/fields/Deductionamount__c.field-meta.xml
<CustomField>
    <fullName>Deductionamount__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deduction Amount</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>