force-app/main/default/objects/Attendance__c/fields/EarlyM__c.field-meta.xml
<CustomField>
    <fullName>EarlyM__c</fullName>
    <formula>IF(TimeValue(  Check_Out__c +7/24) &lt;  Check_out_hour_in_Policy__c ,

VALUE(TEXT((( Check_out_hour_in_Policy__c - TimeValue( Check_Out__c +7/24))/3600000)*60)),0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Early (M)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>