force-app/main/default/objects/Attendance__c/fields/GetCreatedDate__c.field-meta.xml
<CustomField>
    <fullName>GetCreatedDate__c</fullName>
    <formula>DATEVALUE( CreatedDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GetCreatedDate</label>
    <type>Date</type>
</CustomField>