force-app/main/default/objects/Attendance__c/fields/GrossOTHour__c.field-meta.xml
<CustomField>
    <fullName>GrossOTHour__c</fullName>
    <formula>TaxfreeOTHour__c +  AcutalOTHour__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Gross OT (Hour) = OT (Hour) + Tax-free OT (Hour)</inlineHelpText>
    <label>Gross OT (Hour)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>