force-app/main/default/objects/Attendance__c/fields/GrossWorkDay__c.field-meta.xml
<CustomField>
    <fullName>GrossWorkDay__c</fullName>
    <formula>WorkDay__c +  TaxfreeWorkDay__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Gross Work Day = Work Day + Tax-free Work Day</inlineHelpText>
    <label>Gross Work Day</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>