force-app/main/default/objects/Attendance__c/fields/Holiday__c.field-meta.xml
<CustomField>
    <fullName>Holiday__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Holiday</label>
    <type>Checkbox</type>
</CustomField>