force-app/main/default/objects/Attendance__c/fields/InCycle__c.field-meta.xml
<CustomField>
    <fullName>InCycle__c</fullName>
    <defaultValue>false</defaultValue>
    <label>In Cycle</label>
    <type>Checkbox</type>
</CustomField>