force-app/main/default/objects/Attendance__c/fields/LateM__c.field-meta.xml
<CustomField>
    <fullName>LateM__c</fullName>
    <formula>IF(
TimeValue(  Check_in__c +7/24) &gt;  Check_in_hour_in_Policy__c ,
VALUE(TEXT(((TimeValue(  Check_in__c +7/24) -  Check_in_hour_in_Policy__c )/3600000)*60)),0
)</formula>
    <label>Late (M)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>