force-app/main/default/objects/Attendance__c/fields/OT_FLow__c.field-meta.xml
<CustomField>
    <fullName>OT_FLow__c</fullName>
    <formula>IF(
TimeValue( Check_Out__c +7/24) &gt;   Check_out_Policy_Flow__c  ,
value(text(TimeValue( Check_Out__c +7/24) - Check_out_Policy_Flow__c ))/3600000,0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OT FLow</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>