force-app/main/default/objects/Attendance__c/fields/OTHour__c.field-meta.xml
<CustomField>
    <fullName>OTHour__c</fullName>
    <formula>IF(
And (TimeValue(  Check_Out__c +7/24) &gt;  Check_out_hour_in_Policy__c, Employee__r.Work_Policy__r.OT__c = True),
value(text(TimeValue( Check_Out__c +7/24) - Check_out_hour_in_Policy__c ))/3600000,0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OT Check</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>