force-app/main/default/objects/Attendance__c/fields/TaxfreeOTHour__c.field-meta.xml
<CustomField>
    <fullName>TaxfreeOTHour__c</fullName>
    <inlineHelpText>Plus hour when OT: (+ 50% hour in Business Day), (+ 100% hour in Weekend), (+ 200% hour in Holiday)</inlineHelpText>
    <label>Tax-free OT (Hour)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>