force-app/main/default/objects/Attendance__c/fields/TaxfreeWorkDay__c.field-meta.xml
<CustomField>
    <fullName>TaxfreeWorkDay__c</fullName>
    <inlineHelpText>Value of plus working day on special occasions: Weekend, Holiday</inlineHelpText>
    <label>Tax-free Work Day</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>