force-app/main/default/objects/Attendance__c/fields/WEEKDAY__c.field-meta.xml
<CustomField>
    <fullName>WEEKDAY__c</fullName>
    <formula>TEXT(WEEKDAY(  Attendance_date__c  ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>WEEKDAY</label>
    <type>Text</type>
</CustomField>