force-app/main/default/objects/Attendance__c/fields/Weekend__c.field-meta.xml
<CustomField>
    <fullName>Weekend__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Weekend</label>
    <type>Checkbox</type>
</CustomField>