force-app/main/default/objects/Attendance__c/fields/WFHStatus__c.field-meta.xml
<CustomField>
    <fullName>WFHStatus__c</fullName>
    <label>WFH Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Created</fullName>
            </value>
            <value>
                <fullName>Planned</fullName>
            </value>
            <value>
                <fullName>Used</fullName>
                <default>true</default>
                <label>Used</label>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>