force-app/main/default/objects/Attendance__c/fields/Work_cycle__c.field-meta.xml
<CustomField>
    <fullName>Work_cycle__c</fullName>
    <label>Work cycle</label>
    <referenceTo>WorkCycle__c</referenceTo>
    <relationshipLabel>Attendance</relationshipLabel>
    <relationshipName>Attendance</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>