force-app/main/default/objects/Attendance__c/fields/WorkDay__c.field-meta.xml
<CustomField>
    <fullName>WorkDay__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Work Day</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>