force-app/main/default/objects/Attendance__c/validationRules/Employee_of_Workcycle_and_Attendance.validationRule-meta.xml
<ValidationRule>
    <fullName>Employee_of_Workcycle_and_Attendance</fullName>
    <active>true</active>
    <errorConditionFormula>Employee__c  &lt;&gt;  Work_cycle__r.Employee__c</errorConditionFormula>
    <errorMessage>Employee in Attendance must MATCH Employee in Workcycle</errorMessage>
</ValidationRule>