force-app/main/default/objects/Attendance__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Employee__c</columns>
    <columns>Attendance_date__c</columns>
    <columns>Type__c</columns>
    <columns>Check_in__c</columns>
    <columns>Check_Out__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>